Delete old versions from disk while keeping them indexed as deleted
